--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Academico_
-@using Academico_.Models
+﻿@using SistemaEscolar
+@using SistemaEscolar.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
